# crewai_flow_x_linkedin_repost

./: README.md  example.env  pyproject.toml
knowledge/: user_preference.txt
src/crewai_flow_x_linkedin_repost/: main.py
src/crewai_flow_x_linkedin_repost/tools/: __init__.py  linkedin_post_tool.py  x_reader_tool.py
